[project]
name = "putio.py"
description = "Python client for put.io API v2"
version = "8.8.0"
authors = [
    {name = "Cenk Altı", email = "cenkalti@gmail.com"},
]
readme = "README.rst"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "requests",
    "tus.py",
]
[project.urls]
Homepage = "https://github.com/cenkalti/putio.py"
Issues = "https://github.com/cenkalti/putio.py/issues"
[tool.setuptools]
license-files = []
